syntax = "proto3"; // 指定proto版本
package sso; // 指定包名

option go_package = "sso";

service SsoService {
    rpc GetLoginInfo (LoginInfoReq) returns (LoginInfoRsp) {
    }
    rpc SaveUserInfo (User) returns (User) {
    }
}

message LoginInfoReq {
    string token = 1;
}

// HelloRequest 请求结构
message LoginInfoRsp {
    User user = 1;
    repeated Resource resources = 2;
    repeated UserGroup userGroupes = 3;
}

message Resource {
    int32 id = 1;
    int32 pid = 2;
    string name = 3;
    string sysName = 4;
    int32 priority = 5;
    string path = 6;
    string type = 7; //菜单、按钮
    string permission = 8;
    bool available = 9;
}

message User {
    int32 id = 1;
    string name = 2;
    string phone = 3;
    repeated int32 gids = 4;
    bool available = 5;
}

message UserGroup {
    int32 id = 1;
    string name = 2;
    repeated int32 resources = 3;
    bool available = 4;
}
